--- a/app/views/greetings/hello.html.erb
+++ b/app/views/greetings/hello.html.erb
@@ -1,7 +1,11 @@
 <h1>Hello <%= @name %>!</h1>
 
 <%= form_tag '/mynameis' do %>
-  <%= text_field_tag :person %>
+  <%= label_tag :person %> <%= text_field_tag :person %>
+  <%= label_tag :color %> <%= text_field_tag :color %>
+  <%= label_tag :size %> <%= text_field_tag :size %>
+
+  <%= submit_tag %>
 <% end %>
 
 <%= link_to "See ya!", '/bye', :method => 'delete' %>
