--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,13 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <style>
+    body {
+      color: <%= @color %>;
+      font-size: <%= @size %>;
+    }
+  </style>
 </head>
 <body>
 
